--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tests",
   "version": "1.0.0",
+  "workspaces": [
+    "./src/service1"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "jest"
